style/style.css
body {
  /* background-color: aqua; */
  font-family: 'Roboto', sans-serif;
}

h1 {
  text-align: center;
}

table {
  border-collapse: collapse;
  /* border: 2px solid rgb(200,200,200); */
  letter-spacing: 1px;
  font-size: 1rem;
}

td, th {
  /* border: 1px solid rgb(190,190,190); */
  padding: 10px 20px;
  background-color: cornsilk;
}

th {
  background-color: rgb(235,235,235);
}

th>svg {
  display: none;
  color: blue;
  border: none;
}

th:hover svg {
  display: inline;
}

td {
  text-align: center;
}

.btns {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

input[type="button"] {
  flex: auto;
  padding: 0.25rem;
  margin: 1rem;
}

input[type="text"] {
  align-items: center;
}

/* input[type="checkbox"] {
  appearance: textfield;
} */

